# bugtoprompt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RUN-LOG.md  SECURITY.md  biome.json  handoff.md  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  tsup.standalone.config.ts  vitest.config.ts
.github/workflows/: canary.yml  ci.yml  release-stable.yml  sidecar-rust.yml  sidecar-tray.yml  ultracode.yml  ultrathink.yml
docs/: PRD-SIDECAR-RUST-APP.md  PRD.md  activation-persistence-security.md  console.md  design-review.md
example/: README.md  index.html
extension/: README.md  manifest.json  onboarding.css  onboarding.html  options.css  options.html  popup.css  popup.html  tsconfig.json
extension/scripts/: build.mjs  pack.mjs
extension/src/: background.test.ts  background.ts  config.test.ts  config.ts  (+9 more)
scripts/: check-node-compat.mjs  check-node-compat.test.mjs  github-issue-service.mjs  release-beta.mjs  release-stable.mjs  service-security.mjs  service-security.test.mjs  transcript-segments.mjs
server/: README.md  artifact-endpoint.test.mjs  bin-entrypoint.test.mjs  github-issue-service.mjs  github-issue-service.test.mjs  local-transcribe.mjs  local-transcribe.test.mjs  package.json  service-auth-e2e.test.mjs  service-e2e.test.mjs  service-preflight.mjs  service-security.mjs  service-security.test.mjs  service-startup-nonblocking.test.mjs  transcript-segments.test.mjs
sidecar-rust/: Cargo.toml
sidecar-rust/src/: app.rs  config.rs  gh.rs  handlers.rs  launch.rs  lib.rs  main.rs  migrate.rs  mw.rs  preflight.rs  security.rs  state.rs  transcribe.rs  updater.rs
sidecar-rust/tests/: integration.rs
sidecar-tray/: .gitignore  Cargo.toml  settings.html
sidecar-tray/packaging/: Info.plist
sidecar-tray/scripts/: package-dmg.sh
sidecar-tray/src/: main.rs  settings_ui.rs  settings_window.rs  supervisor.rs
src/: css.d.ts  index.ts  standalone.css  standalone.css.test.ts  standalone.test.ts  standalone.tsx  test-setup.ts
(+67 files in other folders)
