[package]
name = "sidecar-tray"
version = "0.1.0"
edition = "2024"
description = "BugToPrompt desktop sidecar — macOS menu bar tray shell (issue #57)"
publish = false

[dependencies]
sidecar-rust = { path = "../sidecar-rust" }
auto-launch = "0.5"
tao = { version = "0.35", default-features = false, features = ["rwh_06"] }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros", "signal", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.24"
wry = "0.55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
